--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
-  "description": "A Vue 3 + Vite project for building Chrome extensions",
+  "description": "The Custom Page Scroll extension allows users to scroll specific elements on a webpage using keyboard shortcuts. It's a handy tool that enhances your browsing experience by giving you more control over how you navigate web content.",
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.18",
     "@iconify-json/mdi": "^1.1.54",
@@ -35,8 +35,8 @@
     "vue-tsc": "^1.8.8",
     "webext-bridge": "^6.0.1"
   },
-  "displayName": "Vite Vue 3 Chrome Extension",
-  "name": "vite-vue3-chrome-extension-v3",
+  "displayName": "pagedownup modifier",
+  "name": "pagedownup-modifier",
   "overrides": {
     "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
   },
@@ -59,5 +59,5 @@
     "preview": "vite preview"
   },
   "type": "module",
-  "version": "0.0.1"
+  "version": "1.0.0"
 }
